# tlg-youtube-notifier-bot

./: Dockerfile  docker-compose.yml  pyproject.toml
yt_subs_bot/: __main__.py  app.py
yt_subs_bot/handlers/: __init__.py  handlers.py
yt_subs_bot/notifier/: notifier.py
yt_subs_bot/storage/: storage.py
yt_subs_bot/youtube/: __init__.py  client.py  test_client.py
